:lipstick: fix: spinner layout issue when app loading

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -21,5 +21,15 @@
     opacity .7
     filter blur(2px)
 
+// FIXME temporary cozy-ui layout fixes
+html, body
+    height 100%!important
+.o-layout--2panes
+    height 100%!important
+    position relative
+    @media (max-width: (1024/basefont)rem)
+        main
+            height calc(100% - 3rem - 3rem)
+
 // should be temporary
 @require './hiddenInstallerView.styl'
